<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_staff"
            android:title="@string/staff" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/books" />
        <item
            android:id="@+id/nav_elect"
            android:icon="@drawable/ic_baseline_computer_24"
            android:title="@string/electronic" />
        <item
            android:id="@+id/nav_cloth"
            android:icon="@drawable/ic_shop"
            android:title="@string/clothing" />
        <item
            android:id="@+id/nav_logout"
            android:onClick="logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>